--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Numpy 1.6 Workshop Submission:\n",
+    "Sasha Morrison, (QuantFreeman)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. What is the Average Height of US Presidents?\n",
     "\n",
     "Aggregates available in NumPy can be extremely useful for summarizing a set of values.\n",
@@ -14,6 +22,47 @@
     "Find the mean height, the standard deviation of height, and the president who is the smallest and tallest.\n",
     "\n",
     "You can use `pandas` to read in the file if you want, then cast the column to a `np.array`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(179.73809523809524,\n",
+       " 6.931843442745892,\n",
+       " order                     4\n",
+       " name          James Madison\n",
+       " height(cm)              163\n",
+       " Name: 3, dtype: object,\n",
+       " order                      16\n",
+       " name          Abraham Lincoln\n",
+       " height(cm)                193\n",
+       " Name: 15, dtype: object)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "data = pd.read_csv('data\\president_heights.csv')\n",
+    "data2 = np.array(data['height(cm)'])\n",
+    "\n",
+    "data2.argmin()\n",
+    "data2.argmax()\n",
+    "std = data2.std()\n",
+    "avg = data2.mean()\n",
+    "small = data.iloc[3]\n",
+    "tall = data.iloc[15]\n",
+    "\n",
+    "avg, std, small, tall"
    ]
   },
   {
@@ -38,6 +87,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def poly(x, coeff):\n",
+    "    # coeff array for shape\n",
+    "    a = np.array(coeff)\n",
+    "    # replace all ele with x\n",
+    "    a[:] = x\n",
+    "    # x**0 == 1\n",
+    "    a[0] = 1\n",
+    "    # x*x, x*x*x, etc\n",
+    "    a = np.cumprod(a)\n",
+    "    # array multiplication and sum\n",
+    "    return np.sum(a * coeff)\n",
+    "\n",
+    "poly(5, [2, 1, 1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,6 +131,44 @@
     "\n",
     "\n",
     "Your result should be equal to the output of `scipy.special.softmax`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.00221959, 0.00181724, 0.00148783, 0.00134625, 0.00200836]),\n",
+       " array([0.00221959, 0.00181724, 0.00148783, 0.00134625, 0.00200836]))"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy import special\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "data = pd.read_csv('data\\iris.csv')\n",
+    "data2 = np.array(data['sepallength'])\n",
+    "\n",
+    "def softmax(arr):\n",
+    "    arr = np.array(arr)\n",
+    "    mx = sum(np.exp(arr))\n",
+    "    return np.exp(arr) / mx\n",
+    "\n",
+    "a = softmax(data2)\n",
+    "b = special.softmax(data2)\n",
+    "\n",
+    "b[0:5], a[0:5]\n",
+    "# these results look the same, \n",
+    "# but fail under '==' test"
    ]
   },
   {
@@ -85,6 +206,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 2 1 1 1 0 2 2 0]\n",
+      " [2 1 3 0 1 0 1 0 1 1]\n",
+      " [0 3 0 2 3 1 0 1 0 0]\n",
+      " [1 0 2 1 0 1 0 2 1 2]\n",
+      " [2 2 2 0 0 1 1 1 1 0]\n",
+      " [1 1 1 1 1 2 0 0 2 1]]\n",
+      "[[ 9  9  4  8  8  1  5  3  6  3]\n",
+      " [ 3  3  2  1  9  5  1 10  7  3]\n",
+      " [ 5  2  6  4  5  5  4  8  2  2]\n",
+      " [ 8  8  1  3 10 10  4  3  6  9]\n",
+      " [ 2  1  8  7  3  1  9  3  6  2]\n",
+      " [ 9  2  6  5  3  9  4  6  1 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(100)\n",
+    "arr = np.random.randint(1,11,size=(6, 10))\n",
+    "out = np.zeros_like(arr)\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "    val, counts = np.unique(arr[i], return_counts=True)\n",
+    "    out[i, val-1] = counts\n",
+    "\n",
+    "print(out, arr, sep='\\n')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,6 +249,13 @@
     "\n",
     "Compute the one-hot encodings (AKA dummy binary variables) for each unique value in the array.\n",
     "\n",
+    "```\n",
+    "0 = 000\n",
+    "1 = 100\n",
+    "2 = 010\n",
+    "3 = 001\n",
+    "\n",
+    "```\n",
     "Input:\n",
     "```\n",
     "np.random.seed(101) \n",
@@ -108,6 +272,42 @@
     "#>        [ 0.,  1.,  0.],\n",
     "#>        [ 1.,  0.,  0.]])\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def onehot(inp):\n",
+    "    top = np.argmax(inp)\n",
+    "    rows = len(inp)\n",
+    "    cols = inp[top]\n",
+    "    out = np.zeros((rows, cols))\n",
+    "    \n",
+    "    for i in range(rows):\n",
+    "        out[i, inp[i]-1] = 1\n",
+    "    \n",
+    "    return out\n",
+    "    \n",
+    "onehot([2, 3, 2, 2, 2, 10])"
    ]
   },
   {
@@ -164,6 +364,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import uniform\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "class DiscreteRV():\n",
+    "    def __init__(self, q):\n",
+    "        self.q = q\n",
+    "        self.space = np.cumsum(q)\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return 'DiscreteRV(' + str(self.q) + ')'\n",
+    "        \n",
+    "    def draw(self, k):\n",
+    "        for i in range(k):\n",
+    "            U = uniform(0,1)\n",
+    "            r = np.searchsorted(self.space, U)\n",
+    "            print(r)\n",
+    "        # r is the result of a single draw as an index of self.space\n",
+    "        \n",
+    "DRV = DiscreteRV([0.1, 0.25, 0.65])\n",
+    "DRV.draw(10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -188,24 +434,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 5]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def peak_find(arr):\n",
+    "    out = []\n",
+    "    n = len(arr)\n",
+    "    for i in range(1, n-1):\n",
+    "        if arr[i] > arr[i-1] & arr[i] > arr[i+1]:\n",
+    "            out.append(i)\n",
+    "            \n",
+    "    return out\n",
+    "\n",
+    "peak_find([1, 3, 7, 1, 2, 6, 0, 1])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3], dtype=int64)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def loopless_peak(inp):\n",
+    "    \n",
+    "    lshift = np.roll(inp, -1)\n",
+    "    rshift = np.roll(inp, 1)\n",
+    "    lcheck = np.where(inp - lshift > 0)\n",
+    "    rcheck = np.where(inp - rshift > 0)\n",
+    "    out = np.intersect1d(lcheck, rcheck)\n",
+    "    return out\n",
+    "\n",
+    "# Note, this design doesn't account for \n",
+    "# 'peaks' in the [0] or [-1] positions \n",
+    "\n",
+    "test = [1,3,2,4,3]\n",
+    "loopless_peak(test)"
+   ]
   },
   {
    "cell_type": "code",
@@ -233,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.8.3"
   },
   "next_doc": {
    "link": "matplotlib",
@@ -246,5 +533,5 @@
   "title": "NumPy"
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
