--- a/m1-6-numpy-main/Workshop.ipynb
+++ b/m1-6-numpy-main/Workshop.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -102,7 +102,7 @@
        "32"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "       0.01099368, 0.00736928, 0.00900086, 0.006668  , 0.00493978])"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "       0.01099368, 0.00736928, 0.00900086, 0.006668  , 0.00493978])"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -391,7 +391,7 @@
        "       [1., 0., 0.]])"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,15 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([0, 1, 2, 3, 4, 5]), array([1, 2, 1, 1, 1, 0])]\n",
-      "[1 2 1 1 1 0]\n"
+      "[array([0, 1, 2, 3, 4, 5]), array([1, 2, 1, 1, 1, 0])]\n"
      ]
     }
    ],
@@ -484,16 +483,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 835,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6295479387514277\n",
+      "0.977111019095277\n",
       "0.25\n",
-      "0.6295479387514277\n",
+      "0.977111019095277\n",
       "0.75\n"
      ]
     },
@@ -503,7 +502,7 @@
        "1"
       ]
      },
-     "execution_count": 835,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,16 +526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 915,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 2, 2, 1, 2, 1, 1, 1, 2, 2, 0, 2, 2])"
+       "array([1, 2, 2, 0, 2, 1, 0, 2, 2, 0, 0, 2, 2])"
       ]
      },
-     "execution_count": 915,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -599,16 +598,6 @@
      "text": [
       "[2, 5]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 278,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -623,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +630,7 @@
        "array([2, 5])"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
