--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 115
+     "execution_count": 8
     }
    ],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 113
+     "execution_count": 10
     }
    ],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 11
     }
    ],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,18 +425,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[1, 1, 1, 2, 1, 2, 0, 1, 1, 0]"
+       "[1, 1, 0, 2, 1, 1, 0, 1, 1, 1]"
       ]
      },
      "metadata": {},
-     "execution_count": 110
+     "execution_count": 13
     }
    ],
    "source": [
@@ -469,21 +469,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def peaks(arr):\n",
     "    p = []\n",
     "    for i in range(len(arr)-1):\n",
-    "        if arr[i-1] < a[i] > arr[i+1]:\n",
+    "        if arr[i-1] < arr[i] > arr[i+1]:\n",
     "            p.append(i)\n",
     "    return p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,20 +511,19 @@
     "def np_peaks(arr):\n",
     "    arr0 = np.roll(arr,-1)\n",
     "    arr2 = np.roll(arr,1)\n",
-    "    #np.piecewise(a, (arr0 < arr) & (arr > arr2), [True, False])\n",
-    "    return np.where( (arr0 < arr) & (arr > arr2) )"
+    "    return np.where( (arr0 < arr) & (arr > arr2) )[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(array([2, 5], dtype=int64),)\n(array([2, 6], dtype=int64),)\n"
+      "[2 5]\n[2 6]\n"
      ]
     }
    ],
@@ -538,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,19 +545,19 @@
     "def np_peaks_old(arr):\n",
     "    d = np.diff(arr) \n",
     "    s = np.sign(d)\n",
-    "    return np.where(s == s.min())"
+    "    return np.where(s == s.min())[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(array([2, 5], dtype=int64),)\n"
+      "[2 5]\n"
      ]
     }
    ],
