--- a/03_numpy computation.ipynb
+++ b/03_numpy computation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "array([0.16666667, 1.        , 0.25      , 0.25      , 0.125     ])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,20 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 s ± 29.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "big_array = np.random.randint(1, 100, size=1000000)\n",
-    "%timeit compute_reciprocals(big_array)"
+    "# big_array = np.random.randint(1, 100, size=1000000)\n",
+    "# %timeit compute_reciprocals(big_array)"
    ]
   },
   {
@@ -96,38 +88,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.16666667 1.         0.25       0.25       0.125     ]\n",
-      "[0.16666667 1.         0.25       0.25       0.125     ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(compute_reciprocals(values))\n",
-    "print(1.0 / values)"
+    "# print(1.0 / values)\n",
+    "# print(compute_reciprocals(values))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.4 ms ± 92.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%timeit (1.0 / big_array)"
+    "# %timeit (1.0 / big_array)"
    ]
   },
   {
@@ -139,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "hide-output": false
    },
@@ -161,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "hide-output": false
    },
@@ -172,7 +147,7 @@
        "1.118033988749895"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "hide-output": false
    },
@@ -202,7 +177,7 @@
        "       [3, 4]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +199,7 @@
        "       [2, 4]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +245,7 @@
        "5"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -303,22 +278,21 @@
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "reduce only supported for binary functions",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-5c040de6ef92>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# add.reduce is total sum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduce\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: reduce only supported for binary functions"
-     ]
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = np.arange(1, 6)\n",
-    "print(x.sum())\n",
+    "x1 = np.arange(1, 6)\n",
+    "print(x1.sum())\n",
     "# add.reduce is total sum\n",
-    "np.add.reduce(x)"
+    "np.add.reduce(x1)"
    ]
   },
   {
@@ -330,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -346,16 +320,16 @@
        "array([ 1,  3,  6, 10, 15])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = np.arange(1, 6)\n",
-    "print(x.cumsum())\n",
+    "x2 = np.arange(1, 6)\n",
+    "print(x2.cumsum())\n",
     "# add.reduce is total sum\n",
-    "np.add.accumulate(x)"
+    "np.add.accumulate(x2)"
    ]
   },
   {
@@ -367,9 +341,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -380,13 +361,16 @@
        "       [ 5, 10, 15, 20, 25]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.multiply.outer(x, x)"
+    "\n",
+    "x3 = np.arange(1,6)\n",
+    "print(x3)\n",
+    "np.multiply.outer(x3, x3)"
    ]
   },
   {
@@ -416,24 +400,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.78930459 -0.73209118 -0.81585044 -0.09495964]\n"
+      "[-2.55298982  0.6536186   0.8644362  -0.74216502]\n",
+      "(array([1, 2]),)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([0]),)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "x = np.random.randn(4)\n",
     "print(x)\n",
-    "np.where(x > 0)  # Insert 1 if x > 0 true, otherwise 0"
+    "res = np.where(x > 0.5)  # Insert 1 if x > 0 true, otherwise 0\n",
+    "print(res)"
    ]
   },
   {
@@ -445,22 +421,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.78930459])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.6536186 0.8644362]\n",
+      "[-2.55298982  0.8644362 ]\n"
+     ]
     }
    ],
    "source": [
-    "x[np.where(x > 0)]"
+    "print(x[np.where(x > 0)])\n",
+    "print(x[[0,2]])"
    ]
   },
   {
@@ -474,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +460,7 @@
        "array([ True, False])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {
     "hide-output": false
    },
@@ -516,7 +491,7 @@
        "array([2])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   },
   "next_doc": {
    "link": "matplotlib",
